fix gif z-index

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -391,7 +391,10 @@ nav a.active span {
   position: absolute;
   top: 79vw;
   right: -3rem;
-  z-index: -1;
+}
+
+.remotes {
+  z-index: 1;
 }
 
 @media only screen and (max-width: 30rem) {
@@ -654,6 +657,7 @@ nav a.active span {
     width: 94%;
     margin-bottom: -4.5rem;
     margin-right: -5.3vw;
+    z-index: 0;
   }
 
   .attribute .content {
